# robotic_pose_estimation

./: readme.md
robot_vision_ws/src/0_camera_calibration/gazebo_camera_calibration/: CMakeLists.txt  package.xml
robot_vision_ws/src/0_camera_calibration/gazebo_camera_calibration/launch/: extrinsicCalibration.launch  intrinsicCalibration.launch
robot_vision_ws/src/0_camera_calibration/gazebo_camera_calibration/src/: getPoseImage_node.cpp  intrinsic_calibration.cpp  testVelocityController.cpp
robot_vision_ws/src/0_camera_calibration/gazebo_camera_calibration/worlds/: calibration_chessboard.world  calibration_circleboard.world
robot_vision_ws/src/0_camera_calibration/output_extrinsic_calibration_images_poses/: readme.txt
robot_vision_ws/src/0_camera_calibration/output_intrinsic_calibration/: cam_settings.json  readme.txt
robot_vision_ws/src/0_libraries/wrapper_libraries/: CMakeLists.txt  package.xml
robot_vision_ws/src/0_libraries/wrapper_libraries/include/wrapper_libraries/: Intrinsic_Cal.h  MarkerDebug.h  MoveGroupMove.h  PoseSaver.h  RobotGripper.h  imageSaver.h
robot_vision_ws/src/0_libraries/wrapper_libraries/src/: Intrinsic_Cal.cpp  MarkerDebug.cpp  MoveGroupMove.cpp  PoseSaver.cpp  RobotGripper.cpp  imageSaver.cpp
robot_vision_ws/src/0_object_pose_publisher/: CMakeLists.txt  package.xml
robot_vision_ws/src/0_object_pose_publisher/classes/customModel/: customModel.py  dopeModel.py  featureModel.py  residualModel.py
robot_vision_ws/src/0_object_pose_publisher/classes/datasetPreparation/: datasetPreparation.py
robot_vision_ws/src/0_object_pose_publisher/classes/positionSolver/: positionSolver.py
robot_vision_ws/src/0_object_pose_publisher/json/: _object_settings.json  cam_settings.json
robot_vision_ws/src/0_object_pose_publisher/launch/: object_pose_publisher.launch
robot_vision_ws/src/0_object_pose_publisher/src/: object_pose_publisher.py  object_pose_publisher_test.py
robot_vision_ws/src/0_robot_control/: CMakeLists.txt  package.xml
robot_vision_ws/src/0_robot_control/initialization/: eMc.yaml  out_camera_data.xml
robot_vision_ws/src/0_robot_control/launch/: base_object_publisher.launch  robot_control.launch
robot_vision_ws/src/0_robot_control/src/: base_object_publisher.cpp  robot_control.cpp
robot_vision_ws/src/gazebo_sim/: CMakeLists.txt  package.xml
robot_vision_ws/src/gazebo_sim/launch/: fanucRobotWorld_cameraCalibration.launch  fanucRobotWorld_createThorVideo.launch  object_detection.launch  robot_model.launch
robot_vision_ws/src/gazebo_sim/objects/circlegrid/: circlegrid.sdf  model.config
robot_vision_ws/src/gazebo_sim/objects/circlegrid/materials/: textures.material
robot_vision_ws/src/gazebo_sim/objects/circlegrid/materials/scripts/: textures.material
robot_vision_ws/src/gazebo_sim/objects/circlegrid1m/: circlegrid1m.sdf  model.config
robot_vision_ws/src/gazebo_sim/objects/cube_30mm/: cube_30mm.sdf  model.config
robot_vision_ws/src/gazebo_sim/objects/cube_30mm/meshes/: cube_30mm.dae
robot_vision_ws/src/gazebo_sim/objects/cylinder_measure/: cylinder_measure.sdf  model.config
robot_vision_ws/src/gazebo_sim/objects/directional_light/: directional_light.sdf  model.config
robot_vision_ws/src/gazebo_sim/objects/measure_line/: measure_line.sdf  model.config
robot_vision_ws/src/gazebo_sim/objects/opencv_chessboard/: model.config  opencv_chessboard.sdf
robot_vision_ws/src/gazebo_sim/objects/opencv_chessboard/materials/scripts/: textures.material
robot_vision_ws/src/gazebo_sim/objects/sphere/: model.config  sphere.sdf
robot_vision_ws/src/gazebo_sim/objects/thorHammer/: model.config  thorHammer.sdf
robot_vision_ws/src/gazebo_sim/objects/thorHammer/meshes/: thorHammer.dae
robot_vision_ws/src/gazebo_sim/worlds/: extrinsic_calibration.world  intrinsic_calibration.world  object.world
